MODINVUP-128 more resilient data flow
   - avoid hanging processes on fatal errors
   - better logging, pausing in case of errors
   - fixes to activate, pause, resume, i.e. pick up last file being processed as error happened
   - add time-outs in blocking gatekeeper functions that passes through batches of records, to avoid waiting indefinitely

--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -859,7 +859,7 @@ components:
             $ref: "#/components/schemas/transformation"
     transformation:
       type: object
-      description: >- 
+      description: >-
         A transformation pipeline configuration header that steps can be
         assigned to
       properties:
@@ -1187,7 +1187,7 @@ components:
           description: Then name for the transformation pipeline used for the job.
         status:
           type: string
-          description: The intermittent state of final outcome of the job.
+          description: The intermittent state or final outcome of the job.
         started:
           type: string
           description: Timestamp when the job started.
