MODINVUP-128 MODINVIMP-15 overwrite file in queue
  When posting a file by name, and a file with the same name already exist in the FS queue, then just assume that the intention is to replace the old file with the new.

--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -121,6 +121,12 @@ paths:
         description: Import configuration identifier (UUID)
         schema:
           type: string
+      - in: query
+        name: filename
+        required: false
+        description: Name of the file to be shown in log statements or failed records. If not provided, a random file name is assigned.
+        schema:
+          type: string
     post:
       operationId: importXmlRecords
       description: Load XML document using given import configuration
