MODINVUP-128 MODINVIMP-42 misc fixes
  - complete implementation of metadata for log statements (db view, mappings)
  - fix naming of metadata properties to align with other FOLIO APIs
  - fix issue with application of metadata when batch inserting records to database
  - use statics for names of metadata elements
  - dates: expose stored localdatetimes as zoneddatatimes in utc, to align with other FOLIO APIs. vertx-lib handles localdatetime only, but we ensure that all dates are actually current utc time when stored as local

--- a/src/main/resources/openapi/inventory-import-1.0.yaml
+++ b/src/main/resources/openapi/inventory-import-1.0.yaml
@@ -1200,7 +1200,7 @@ components:
           type: string
           description: Time stamp for the records creation.
           readOnly: true
-        createdByUser:
+        createdByUserId:
           type: string
           format: uuid
           description: ID of the user creating the record.
@@ -1210,7 +1210,7 @@ components:
           format: uuid
           description: Time stamp for the most recent update of the record.
           readOnly: true
-        updatedByUser:
+        updatedByUserId:
           type: string
           format: uuid
           description: The ID of the user who most recently updated the record.
